fix spacing of letters

--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -73,11 +73,15 @@
   
       h2 {
         font-size: 35px;
+        
       }
   
       h3 {
         font-size: 30px;
         color: white;
+        letter-spacing: 5px;
+        font-weight: 300;
+        text-transform: uppercase;
 
         @include mobile {
           font-size: 20px;
